# whis

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPER_HANDOFF.md  README.md  justfile
crates/tauri-plugin-floating-bubble/: Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-floating-bubble/android/: build.gradle.kts
crates/tauri-plugin-floating-bubble/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-floating-bubble/examples/floating-bubble-android-demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
crates/tauri-plugin-floating-bubble/examples/floating-bubble-android-demo/scripts/: copy-android-assets.js
crates/tauri-plugin-floating-bubble/examples/floating-bubble-android-demo/src/: main.ts  styles.css
crates/tauri-plugin-floating-bubble/examples/floating-bubble-android-demo/src-tauri/: .gitignore  Cargo.toml  app-icon.json  tauri.conf.json
crates/tauri-plugin-floating-bubble/guest-js/: index.ts
crates/tauri-plugin-floating-bubble/permissions/: default.toml
crates/tauri-plugin-floating-bubble/permissions/autogenerated/: reference.md
crates/tauri-plugin-floating-bubble/permissions/autogenerated/commands/: handle_bubble_click.toml  handle_bubble_close.toml  has_microphone_permission.toml  has_overlay_permission.toml  hide_bubble.toml  is_bubble_visible.toml  request_overlay_permission.toml  set_bubble_recording.toml  set_bubble_state.toml  show_bubble.toml
crates/tauri-plugin-floating-bubble/permissions/schemas/: schema.json
crates/tauri-plugin-floating-bubble/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
crates/whis-cli/: Cargo.toml  README.md
crates/whis-cli/src/: app.rs  args.rs  error.rs  ipc.rs  main.rs  service.rs  ui.rs
crates/whis-cli/src/commands/: config.rs  listen.rs  mod.rs  model.rs  models.rs  presets.rs  record_once.rs  restart.rs  start.rs  status.rs  stop.rs  toggle.rs
crates/whis-cli/src/commands/record/: mod.rs  types.rs
crates/whis-cli/src/commands/setup/: cloud.rs  interactive.rs  local.rs  mod.rs  post_processing.rs  provider_helpers.rs
crates/whis-cli/src/hotkey/: linux.rs  mod.rs  non_linux.rs  unix_like.rs  windows.rs
crates/whis-core/: Cargo.toml  README.md
crates/whis-core/src/: audio.rs  autotyping.rs  clipboard.rs  config.rs  defaults.rs  error.rs  hotkey.rs  http.rs  lib.rs  model.rs  ollama.rs  platform.rs  polish.rs  post_processing.rs  preset.rs  resample.rs  settings.rs  state.rs  transcribe.rs  typing.rs  verbose.rs
crates/whis-core/src/audio/: chunker.rs  devices.rs  error.rs  mod.rs  pulse.rs  types.rs
crates/whis-core/src/audio/encoder/: embedded.rs  ffmpeg.rs  mod.rs
crates/whis-core/src/audio/recorder/: mod.rs  processor.rs  stream.rs
crates/whis-core/src/audio/vad/: mod.rs  processor.rs  processor_noop.rs
crates/whis-core/src/configuration/: mod.rs  preset.rs  provider.rs
crates/whis-core/src/model/: download.rs  parakeet.rs  types.rs
crates/whis-core/src/provider/: deepgram.rs  deepgram_realtime.rs  elevenlabs.rs  error.rs  groq.rs  local_parakeet.rs  local_whisper.rs  mistral.rs  mod.rs  openai.rs  openai_realtime.rs  realtime.rs
crates/whis-core/src/provider/base/: retry.rs
crates/whis-core/src/settings/: mod.rs  post_processing.rs  services.rs  shortcuts.rs  store_adapter.rs  transcription.rs  ui.rs
crates/whis-core/src/transcription/: mod.rs  ollama.rs  ollama_manager.rs  post_processing.rs  transcribe.rs  warmup.rs
crates/whis-deprecated/: Cargo.toml
crates/whis-desktop/: Cargo.toml  README.md  tauri.conf.json
crates/whis-desktop/icons/: icon.icns
crates/whis-desktop/src/: commands.rs  lib.rs  main.rs  shortcuts.rs  state.rs  tray.rs  window.rs
crates/whis-desktop/src/bubble/: events.rs  mod.rs  window.rs
crates/whis-desktop/src/commands/: bubble.rs  mod.rs  settings.rs  system.rs  validation.rs
crates/whis-desktop/src/commands/models/: parakeet.rs  whisper.rs
crates/whis-desktop/src/recording/: config.rs  control.rs  mod.rs  pipeline.rs
crates/whis-desktop/src/shortcuts/: instructions.rs  ipc.rs  mod.rs  rdev_grab.rs  tauri_plugin.rs
crates/whis-desktop/src/tray/: events.rs  menu.rs  setup.rs
crates/whis-desktop/ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/whis-desktop/ui/src/: App.vue  types.ts  vite-env.d.ts
crates/whis-desktop/ui/src/bubble/: BubbleApp.vue  index.html  main.ts
crates/whis-desktop/ui/src/components/: AppButton.vue  AppInput.vue  AppKeyBadge.vue  AppSelect.vue  AppSlider.vue  CommandBlock.vue  DirectCaptureSetup.vue  ManualShortcutSetup.vue  NoticeCard.vue  PortalShortcutBind.vue  ShortcutInput.vue  ShortcutTabs.vue  SystemShortcutConfig.vue  index.ts
crates/whis-desktop/ui/src/composables/: index.ts  useAsyncOperation.ts  useKeyboardCapture.ts  useParakeetModel.ts  useWhisperModel.ts
crates/whis-desktop/ui/src/router/: index.ts
crates/whis-desktop/ui/src/stores/: settings.ts
crates/whis-desktop/ui/src/utils/: constants.ts  error.ts  index.ts
crates/whis-desktop/ui/src/views/: AboutView.vue  ApiKeyView.vue  HomeView.vue  NotFoundView.vue  PresetsView.vue  SettingsView.vue  ShortcutView.vue
crates/whis-mobile/: Cargo.toml  README.md  app-icon.json  tauri.conf.json
crates/whis-mobile/capabilities/: default.json
crates/whis-mobile/src/: commands.rs  lib.rs  state.rs
crates/whis-mobile/src/commands/: mod.rs  presets.rs  recording.rs  system.rs
crates/whis-mobile/src/recording/: config.rs  mod.rs  pipeline.rs  provider.rs
crates/whis-mobile/ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/whis-mobile/ui/src/: App.vue  types.ts  vite-env.d.ts
crates/whis-mobile/ui/src/assets/: main.css
crates/whis-mobile/ui/src/components/: Accordion.vue  AccordionItem.vue  AppButton.vue  AppInput.vue  AppSelect.vue  CommandCopy.vue  NoticeCard.vue  TabPanel.vue  ToggleSwitch.vue
crates/whis-mobile/ui/src/router/: index.ts
crates/whis-mobile/ui/src/stores/: presets.ts  recording.ts  settings.ts
crates/whis-mobile/ui/src/views/: AboutView.vue  HomeView.vue  PresetsView.vue  (+1 more)
(+124 files in other folders)
