[package]
name = "whisp"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
arboard = "3.4"
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
