[workspace]
resolver = "2"
members = ["crates/whis-core", "crates/whis-cli", "crates/whis-desktop", "crates/whis-mobile", "crates/whis-screenshots"]

[workspace.package]
version = "0.6.2"
edition = "2024"
authors = ["Frank Dierolf <frank_dierolf@web.de>"]
license = "MIT"
repository = "https://github.com/frankdierolf/whis"
homepage = "https://whis.ink"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
cpal = "0.17"
hound = "3.5.1"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive"] }
rdev = { version = "0.5", features = ["unstable_grab"] }
global-hotkey = "0.7"
crossbeam-channel = "0.5"
interprocess = "2"
whis-core = { path = "crates/whis-core", version = "0.6.2", default-features = true }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev libasound2-dev:$CROSS_DEB_ARCH libevdev-dev:$CROSS_DEB_ARCH libx11-dev:$CROSS_DEB_ARCH libxtst-dev:$CROSS_DEB_ARCH python3 curl",
    "mkdir -p /opt/onnxruntime && curl -L https://github.com/microsoft/onnxruntime/releases/download/v1.22.0/onnxruntime-linux-aarch64-1.22.0.tgz | tar xz -C /opt/onnxruntime --strip-components=1"
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu.env]
passthrough = ["ORT_STRATEGY", "ORT_LIB_LOCATION"]
