[package]
name = "tauri-plugin-floating-bubble"
version = "0.1.0"
authors = ["Frank Dierolf"]
description = "A Tauri plugin for displaying floating bubble overlays on Android"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/frankdierolf/whis"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-floating-bubble"

[package.metadata.platforms.support.android]
level = "full"
notes = "Android only - floating bubble overlay"

[package.metadata.platforms.support.ios]
level = "none"
notes = "Not supported on iOS"

[package.metadata.platforms.support.windows]
level = "none"
notes = "Not supported on desktop"

[package.metadata.platforms.support.macos]
level = "none"
notes = "Not supported on desktop"

[package.metadata.platforms.support.linux]
level = "none"
notes = "Not supported on desktop"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
thiserror = "2"
