[package]
name = "whis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for whis voice-to-text functionality"

[dependencies]
anyhow.workspace = true
rdev = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart", "json", "stream"] }
futures-util = "0.3"
cpal.workspace = true
hound = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }
dirs.workspace = true
async-trait = "0.1"
once_cell = "1.20"
enigo = { version = "0.6", default-features = false, features = ["x11rb"], optional = true }

# WebSocket for OpenAI Realtime API
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }
base64 = { version = "0.22", optional = true }

# Embedded MP3 encoder for mobile (no FFmpeg dependency)
mp3lame-encoder = { version = "0.2", optional = true }

# Mobile TLS: Use bundled Mozilla CA certs (avoids Android platform verifier JNI issues)
webpki-roots = { version = "1", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }

# Real-time resampling to 16kHz (always enabled - benefits all providers)
rubato = "1.0"
audioadapter = "2.0"
audioadapter-buffers = "2.0"

# Voice Activity Detection using Silero VAD model
voice_activity_detector = { version = "0.2", optional = true }

# Local transcription via transcribe-rs (unified library for Whisper + Parakeet)
transcribe-rs = { version = "0.2.1", features = ["whisper", "parakeet"], optional = true }

# Archive extraction for Parakeet model downloads
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

# Temp files for Parakeet audio processing
tempfile = { version = "3", optional = true }

# stderr redirection for suppressing GGML Vulkan debug output on Unix
libc = { version = "0.2", optional = true }

# PulseAudio device enumeration with rich metadata (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2.28", optional = true }

[features]
default = ["embedded-encoder", "clipboard", "autotyping", "local-transcription", "vad", "realtime", "pulse-metadata"]
# Autotyping into active window (virtual keyboard simulation)
autotyping = ["enigo"]
# PulseAudio metadata for better device enumeration (Linux only, graceful fallback)
pulse-metadata = ["libpulse-binding"]
# Audio encoding: use embedded mp3lame encoder (no FFmpeg dependency)
embedded-encoder = ["mp3lame-encoder"]
clipboard = ["arboard"]
# Mobile TLS: bundled Mozilla CA certs (avoids Android platform verifier JNI issues)
mobile-tls = ["webpki-roots", "rustls"]
# Local transcription (Whisper + Parakeet via transcribe-rs)
local-transcription = ["transcribe-rs", "tar", "flate2", "tempfile", "libc"]
# Voice Activity Detection to skip silence during recording
vad = ["voice_activity_detector"]
# OpenAI Realtime API for streaming transcription
realtime = ["tokio-tungstenite", "base64"]
# Hotkey parsing and matching (used by CLI and Desktop)
hotkey = ["rdev"]
