[package]
name = "whis"
version = "0.7.2"
edition = "2024"
authors = ["Frank Dierolf <frank_dierolf@web.de>"]
license = "MIT"
description = "DEPRECATED: Use whis-cli instead"
repository = "https://github.com/frankdierolf/whis"
homepage = "https://whis.ink"
keywords = ["deprecated", "voice", "transcription", "whisper", "cli"]
readme = "README.md"

[[bin]]
name = "whis-deprecated"
path = "src/main.rs"
