[package]
name = "whis-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Whis voice-to-text desktop application"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
whis-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tauri = { version = "2.9", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-process = "2.3"
futures-util = "0.3"
image = "0.25"
tauri-plugin-single-instance = "2.3.6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
ashpd = { version = "0.12", features = ["tokio"] }
zbus = { version = "5", features = ["tokio"] }

[features]
default = ["custom-protocol", "local-transcription"]
custom-protocol = ["tauri/custom-protocol"]
local-transcription = ["whis-core/local-transcription"]
