[package]
name = "whis-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Whis voice-to-text mobile application"

[lib]
name = "whis_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Mobile uses lightweight build without local-whisper (smaller binary)
whis-core = { path = "../whis-core", default-features = false, features = ["embedded-encoder"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.9", features = [] }
tauri-plugin-clipboard-manager = "2.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
