[package]
name = "whis-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Whis voice-to-text mobile application"

[lib]
name = "whis_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Mobile uses lightweight build without local-transcription (smaller binary)
# Note: vad feature disabled - requires ONNX Runtime which lacks Android binaries
whis-core = { path = "../whis-core", default-features = false, features = ["embedded-encoder", "realtime"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.9", features = [] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-floating-bubble = { path = "../tauri-plugin-floating-bubble" }

# Android TLS: Initialize rustls-platform-verifier via JNI
# See: https://github.com/tauri-apps/tauri/issues/13267
[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = "0.6"
jni = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
