[package]
name = "floating-bubble-android-demo"
version = "0.1.0"
description = "Android example demonstrating tauri-plugin-floating-bubble"
authors = ["Frank Dierolf"]
edition = "2021"

[lib]
name = "floating_bubble_android_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-floating-bubble = { path = "../../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Empty workspace table to prevent inheritance from parent workspace
# This makes the example self-contained and buildable independently
[workspace]

